--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+.App a {
+  text-decoration: none;
+  font-size: 20px black;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+}
